fixed truncate bug

--- a/index.css
+++ b/index.css
@@ -164,6 +164,6 @@ body .form-control {
   color: #f1f1f1;
 }
 
-.add-favorite {
+/* .add-favorite {
   margin-left: 30px;
-}
+} */
